# cofer

./: .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  about.md  clippy.toml  dagger-container-use-8a5edab282632443.txt  test_manual.ps1  test_request.txt
.cargo-husky/hooks/: pre-commit  pre-push
.config/: nextest.toml
.kiro/specs/mcp-mvp-implementation/: design.md  plan-mvp.md  requirements.md  spec.json  tasks.md
.kiro/specs/mvp-environment-lifecycle/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: api_specifications.md  code_style_conventions.md  mcp_sdk_correction.md  mcp_technology_stack.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
src/: lib.rs  main.rs  service.rs
src/environment/: handle.rs  mod.rs  registry.rs
src/git/: mod.rs
src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
src/podman/: client.rs  container.rs  diagnostics.rs  image.rs  mod.rs
tests/: create_environment_test.rs  mcp_protocol_test.rs  mcp_server_test.rs  podman_container_test.rs
